--- a/Code.ipynb
+++ b/Code.ipynb
@@ -18,8 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Merged GDP + FDI Growth data saved to 'merged_gdp_fdigrowth_data.csv'\n",
-      "Columns: ['Country Name', 'Country Code', 'Indicator Name', 'GDP_1993', 'GDP_1994', 'GDP_1995', 'GDP_1996', 'GDP_1997', 'GDP_1998', 'GDP_1999', 'GDP_2000', 'GDP_2001', 'GDP_2002', 'GDP_2003', 'GDP_2004', 'GDP_2005', 'GDP_2006', 'GDP_2007', 'GDP_2008', 'GDP_2009', 'GDP_2010', 'GDP_2011', 'FDI_1993', 'FDI_1994', 'FDI_1995', 'FDI_1996', 'FDI_1997', 'FDI_1998', 'FDI_1999', 'FDI_2000', 'FDI_2001', 'FDI_2002', 'FDI_2003', 'FDI_2004', 'FDI_2005', 'FDI_2006', 'FDI_2007', 'FDI_2008', 'FDI_2009', 'FDI_2010', 'FDI_2011']\n"
+      "Merged GDP + FDI Growth data saved to 'merged_gdp_fdigrowth_data.csv'\n"
      ]
     }
    ],
@@ -87,8 +86,7 @@
     ")\n",
     "\n",
     "merged_df.to_csv(\"merged_gdp_fdigrowth_data.csv\", index=False)\n",
-    "print(\"✅ Merged GDP + FDI Growth data saved to 'merged_gdp_fdigrowth_data.csv'\")\n",
-    "print(\"Columns:\", merged_df.columns.tolist())\n",
+    "print(\"Merged GDP + FDI Growth data saved to 'merged_gdp_fdigrowth_data.csv'\")\n",
     "\n"
    ]
   },
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f0bac887",
    "metadata": {},
    "outputs": [
@@ -139,7 +137,7 @@
     "\n",
     "# --- Plot GDP Growth ---\n",
     "plt.figure(figsize=(10, 6))\n",
-    "for _, row in merged_df.iterrows():\n",
+    "for _, row in merged_df.iterrows\n",
     "    plt.plot(\n",
     "        gdp_years_num,\n",
     "        row[gdp_cols].astype(float),\n",
@@ -184,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1dbd8da5",
    "metadata": {},
    "outputs": [],
@@ -251,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "904a29c4",
    "metadata": {},
    "outputs": [
@@ -377,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "157d97b4",
    "metadata": {},
    "outputs": [
@@ -462,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ecc57384",
    "metadata": {},
    "outputs": [
@@ -552,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f507adc8",
    "metadata": {},
    "outputs": [
